# morse_cli

./: .gitignore  README.md  pyproject.toml  requirements.txt
StandardFirmata/: StandardFirmata.ino
src/morse/: reader.py
src/morse/helpers/: binaryTree.py  helpers.py
